--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -95,7 +95,7 @@ $(document).ready(function(){
 <p>No current status information</p>
 {% endif %}
 
-<div>
+<div class="clearfix">
 <a target="_blank" href="{{ url_for('site.site', url=url) }}" class="btn btn-link" title="View status page on the public site; opens in a new window">View site status on Blocked <span class="glyphicon glyphicon-share"></span></a>
 </div>
 <div>
