Add category usage report; openrightsgroup/cmp-issues#217

--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -49,6 +49,7 @@
                   <li class=""><a href="{{ url_for('.ispreport_stats') }}">ISP Report Stats</a></li>
                   <li class=""><a href="{{ url_for('.ispreport_reply_stats') }}">ISP Report Reply Stats</a></li>
                   <li class=""><a href="{{ url_for('.ispreport_consistency') }}">ISP Blocking consistency stats</a></li>
+                  <li class=""><a href="{{ url_for('.ispreport_category_stats') }}">ISP Report URL Category stats</a></li>
               </ul>
           </li>
 
