--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -64,7 +64,13 @@
 
           </li>
           <li class=""><a href="{{ url_for('.savedlists') }}">Saved Lists</a></li>
-          <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">System Settings <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                  <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
+                  <li class=""><a href="{{ url_for('.search_filter') }}">Search Filter</a></li>
+              </ul>
+          </li>
           <li class=""><a href="{{url_for('.logout')}}" class="">Log out</a></li>
           <!-- 
           <li class="dropdown">
