URL category management; openrightsgroup/cmp-issues#231

--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -39,6 +39,7 @@
               <ul class="dropdown-menu">
                   <li><a href="{{ url_for('.urls') }}">URL admin</a></li>
                   <li><a href="{{ url_for('.urls_upload') }}">URL upload</a></li>
+                  <li><a href="{{ url_for('.url_categories') }}">URL Categories</a></li>
               </ul>
           </li>
           <li class=""><a href="{{ url_for('.ispreports') }}">ISP Reports</a></li>
