--- a/BlockedFrontend/templates/admin/url_category_edit.html
+++ b/BlockedFrontend/templates/admin/url_category_edit.html
@@ -12,6 +12,7 @@
 <form method="POST" action="{{ url_for('.url_category_update') }}">
     <input type="hidden" name="id" value="{{ category.id }}" />
     {{ forms.text_field('Name', 'name', category.name) }}
+    {{ forms.text_field('Display Name', 'display_name', category.display_name) }}
     <div>
         <input type="submit" class="btn btn-primary" value="Update" />
     </div>
