additional status column (rejected does not match policy); openrightsgroup/cmp-issues#233

--- a/BlockedFrontend/templates/admin/ispreport_reply_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_reply_stats.html
@@ -76,10 +76,11 @@
         <th class="num">Unresolved count</th>
         <th class="num">Unresolved non-policy block count</th>
         <th class="num">Unresolved policy block count</th>
+        <th class="num">Resolved &amp; blocked against policy</th>
         <th class="num">Open report count</th>
     </tr>
     {% for group, list in reply_stats|groupby('network_name') %}
-    <tr><td colspan="9" class="headerrow">{{ group }}</td></tr>
+    <tr><td colspan="10" class="headerrow">{{ group }}</td></tr>
     {% for row in list %}
     <tr>
         <td class="sub">{{ row.year }}</td>
@@ -90,6 +91,7 @@
         <td class="num">{{ row.count_unresolved }}</td>
         <td class="num">{{ row.count_unresolved_badblock }}</td>
         <td class="num">{{ row.count_unresolved_policyblock }}</td>
+        <td class="num">{{ row.count_resolved_badblock }}</td>
         <td class="num"><a href="{{ url_for('.ispreports', state='open', network=row.network_name) }}">{{ row.count_open }}</a></td>
     </tr>
     {% endfor %}
