--- a/BlockedFrontend/templates/admin/ispreport_reply_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_reply_stats.html
@@ -66,6 +66,11 @@
 
 <h2>Reply stats by network</h2>
 
+<div style="margin-bottom: 1.5em">
+<h3>Average across all responsive ISPs: {{ (all_isp_response.avg_response_time|string).split(', ')[0] }}
+<small>Average response time for: {{ all_isp_response.isps | join(', ') }}</small></h3>
+</div>
+
 <table class="table">
     <tr>
         <th>Network/Year</th>
