add response average; openrightsgroup/blocked-org-uk#381

--- a/BlockedFrontend/templates/admin/ispreport_reply_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_reply_stats.html
@@ -68,7 +68,7 @@
 
 <div style="margin-bottom: 1.5em">
 <h3>Average across all responsive ISPs: {{ (all_isp_response.avg_response_time|string).split(', ')[0] }}
-<small>Average response time for: {{ all_isp_response.isps | join(', ') }}</small></h3>
+<small>Average response time for: {{ all_isp_response.isps | join(', ') }} in 2018</small></h3>
 </div>
 
 <table class="table">
