--- a/BlockedFrontend/templates/savedlists/lists.html
+++ b/BlockedFrontend/templates/savedlists/lists.html
@@ -21,6 +21,7 @@ Blocked sites listed by topic.  These lists have been compiled by ORG staff and 
   <th>Name</th>
   <th class="num">Entry count</th>
   <th class="num">Entries reported</th>
+  <th class="num">Entries still blocked</th>
   <th class="num">ISP blocks found</th>
   <th class="num">ISP blocks lifted</th>
 </tr>
@@ -29,6 +30,7 @@ Blocked sites listed by topic.  These lists have been compiled by ORG staff and 
   <td><a name="{{lst.id}}"></a><a href="{{ url_for('list.show_list', name=lst.name) }}">{{ lst.name }}</a> </td>
   <td class="num">{{ lst.item_count }}</td>
   <td class="num">{{ lst.reported_count }}</td>
+  <td class="num">{{ lst.active_block_count }}</td>
   <td class="num">{{ lst.block_count }}</td>
   <td class="num">{{ lst.unblock_count }}</td>
 </tr>
