--- a/BlockedFrontend/templates/savedlists/lists.html
+++ b/BlockedFrontend/templates/savedlists/lists.html
@@ -24,15 +24,18 @@ Blocked sites listed by topic.  These lists have been compiled by ORG staff and 
   <th class="num">Entries still blocked</th>
   <th class="num">ISP blocks found</th>
   <th class="num">ISP blocks lifted</th>
+  <th class="num">Current ISP blocks</th>
 </tr>
 {% for lst in lists %}
 <tr>
   <td><a name="{{lst.id}}"></a><a href="{{ url_for('list.show_list', name=lst.name) }}">{{ lst.name }}</a> </td>
   <td class="num">{{ lst.item_count }}</td>
   <td class="num">{{ lst.reported_count }}</td>
-  <td class="num">{{ lst.active_block_count }}</td>
+  <td class="num">{{ lst.item_block_count }}</td>
+  
   <td class="num">{{ lst.block_count }}</td>
   <td class="num">{{ lst.unblock_count }}</td>
+  <td class="num">{{ lst.active_block_count }}</td>
 </tr>
 
 {% endfor %}
