show primary category totals; openrightsgroup/cmp-issues#234

--- a/BlockedFrontend/templates/admin/ispreport_category_stats.html
+++ b/BlockedFrontend/templates/admin/ispreport_category_stats.html
@@ -30,11 +30,13 @@
 <table class="table table-compressed">
     <tr>
         <th>ORG Category name</th>
+        <th class="num">URL Count (primary category) </th>
         <th class="num">URL Count</th>
     </tr>
     {% for row in categories %}
     <tr>
         <td>{{ row.name }}</td>
+        <td class="num">{{ row.primary_ct }}</td>
         <td class="num">{{ row.ct }}</td>
     </tr>
     {% endfor %}
