--- a/BlockedFrontend/templates/savedlists/lists.html
+++ b/BlockedFrontend/templates/savedlists/lists.html
@@ -33,12 +33,6 @@ Blocked sites listed by topic.  These lists have been compiled by ORG staff and 
   <th class="num">ISP blocks lifted</th>
   <th class="num">Current ISP blocks</th>
 </tr>
-{% set total_item_count = 0 %}
-{% set total_reported_count = 0 %}
-{% set total_item_block_count = 0 %}
-{% set total_block_count = 0 %}
-{% set total_unblock_count = 0 %}
-{% set total_active_block_count = 0 %}
 
 {% for lst in lists %}
 <tr>
@@ -52,23 +46,16 @@ Blocked sites listed by topic.  These lists have been compiled by ORG staff and 
   <td class="num">{{ lst.active_block_count }}</td>
 </tr>
 
-  {% set total_item_count = total_item_count + lst.item_count %}
-  {% set total_reported_count = total_reported_count + lst.reported_count %}
-  {% set total_item_block_count = total_item_block_count + lst.item_block_count %}
-  {% set total_block_count = total_block_count + lst.block_count %}
-  {% set total_unblock_count = total_unblock_count + lst.unblock_count %}
-  {% set total_active_block_count = total_item_count + lst.item_count %}
-
 {% endfor %}
 <tr class="totalrow">
   <td>Totals:</td>
-  <td class="num">{{ total_item_count }}</td>
-  <td class="num">{{ total_reported_count }}</td>
-  <td class="num">{{ total_item_block_count }}</td>
+  <td class="num">{{ totals.item_count }}</td>
+  <td class="num">{{ totals.reported_count }}</td>
+  <td class="num">{{ totals.item_block_count }}</td>
   
-  <td class="num">{{ total_block_count }}</td>
-  <td class="num">{{ total_unblock_count }}</td>
-  <td class="num">{{ total_active_block_count }}</td>
+  <td class="num">{{ totals.block_count }}</td>
+  <td class="num">{{ totals.unblock_count }}</td>
+  <td class="num">{{ totals.active_block_count }}</td>
 </tr>
 </table>
 
