--- a/BlockedFrontend/templates/savedlists/show_list.html
+++ b/BlockedFrontend/templates/savedlists/show_list.html
@@ -28,14 +28,32 @@
 </div>
 
 <div class="row sitelistrow">
-    <div class="col-md-9">
+    <div class="col-md-7">
 
-<h3>{{ itemcount }} {{ "entry" if itemcount == 1 else "entries" }}</h3>
+<h3>{{ itemcount }} {{ "entry" if itemcount == 1 else "entries" }}
+    {% if network %}
+    <small>on {{ network }}</small>
+    {% endif %}
+</h3>
     </div>
-    <div class="col-md-3">
-        <a href="{{ url_for('.export_list', name=savedlist.name) }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-save"></span> Export</a>
+    <div class="col-md-5">
+
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="glyphicon glyphicon-filter"></span>
+            Filter by ISP
+            {%- if network %} ({{ network }}) {%- endif %}
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="{{ url_for('.show_list', name=savedlist.name) }}">( all )</a></li>
+            {% for isp in config.ISPS|sort %}
+            <li><a href="{{ url_for('.show_list', name=savedlist.name, network=isp) }}">{{ isp }}</a></li>
+            {% endfor %}
+        </ul>
+
+        <a href="{{ url_for('.export_list', name=savedlist.name, network=request.args.network|default('')) }}" class="btn btn-default"><span class="glyphicon glyphicon-save"></span> Export</a>
         {% if g.admin %}
-        <a href="{{ url_for('.recheck_list', name=savedlist.name) }}" class="btn btn-default btn-lg" id="refresh"><span class="glyphicon glyphicon-refresh"></span> Recheck</a>
+        <a href="{{ url_for('.recheck_list', name=savedlist.name) }}" class="btn btn-default" id="refresh"><span class="glyphicon glyphicon-refresh"></span> Recheck</a>
         {% endif %}
 
     </div>
@@ -104,7 +122,7 @@ Use the <strong>request unblock</strong> tool to start reporting the mistakes li
     </tr>
     {% endfor %}
 </table>
-{{ paging.page_list('.show_list',  page, pagecount, pagesize, name=savedlist.name ) }}
+{{ paging.page_list('.show_list',  page, pagecount, pagesize, name=savedlist.name, network=request.args.network|default('') ) }}
 
     </div>
 </div>
