--- a/BlockedFrontend/templates/admin/listindex.html
+++ b/BlockedFrontend/templates/admin/listindex.html
@@ -10,6 +10,7 @@
 
 <form action="{{ url_for('.savedlist_merge') }}" method="POST">
 <div style="text-align: right">
+  <input type="submit" class="btn btn-default" value="Add/upload list" />
   <input type="submit" class="btn btn-warning" value="Merge selected" />
 </div>
 <table class="table">
