--- a/BlockedFrontend/templates/admin/listindex.html
+++ b/BlockedFrontend/templates/admin/listindex.html
@@ -10,7 +10,7 @@
 
 <form action="{{ url_for('.savedlist_merge') }}" method="POST">
 <div style="text-align: right">
-  <input type="submit" class="btn btn-default" value="Add/upload list" />
+    <a class="btn btn-default" href="{{ url_for('.savedlist_add') }}">Add/upload list"</a>
   <input type="submit" class="btn btn-warning" value="Merge selected" />
 </div>
 <table class="table">
